fix: 修复逻辑模型删除及模型密集页面宽度
